--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
            	android:layout_width="0dp"
            	android:layout_weight="3"
             android:padding="10dp"
+            android:src="@drawable/play_button"
            	android:contentDescription="This is a play button"
             />
         	 	<!--   android:src="@drawable/play_button" -->
