--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#95a5a6"
+    android:background="@drawable/background"
     android:orientation="vertical"
     tools:context="${relativePackage}.${activityClass}" >
 
@@ -11,28 +11,40 @@
         android:name="com.example.musicplayer.MusicFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5" />
+        android:layout_weight="6" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:padding="10dp"
-        android:background="#FFF">
-		
+        android:layout_weight="2"
+        android:orientation="vertical"
+        android:padding="10dp" >
+
+        <TextView android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="Current Song: "
+            android:textColor="#fff"
+            />
+        
         <TextView
-            android:layout_height="0dp" 
+            android:id="@+id/current_song_view"
             android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="2"
-            android:id="@+id/current_song_view" />
-        <SeekBar 
+            android:textColor="#fff"
+            android:textSize="17dp"
+            android:gravity="center"
+            android:textStyle="bold"/>
+        
+
+        <SeekBar
             android:id="@+id/playback_progress_bar"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"/>
+            android:layout_weight="1.5" />
     </LinearLayout>
-    
+
     <LinearLayout
         android:id="@+id/example_text"
         android:layout_width="match_parent"
@@ -44,18 +56,26 @@
             android:id="@+id/back_button"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_weight="3"
+            android:background="@drawable/button_selector"
             android:contentDescription="This is a back button"
             android:padding="10dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/back_button" />
 
         <ImageButton
             android:id="@+id/play_button"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_weight="3"
+            android:background="@drawable/button_selector"
             android:contentDescription="This is a play button"
             android:padding="10dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/play_button" />
         <!-- android:src="@drawable/play_button" -->
 
@@ -63,12 +83,14 @@
             android:id="@+id/next_button"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_weight="3"
+            android:background="@drawable/button_selector"
             android:contentDescription="This is a back button"
             android:padding="10dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/next_button" />
     </LinearLayout>
-
-    
 
 </LinearLayout>
